# AiSD

./: CMakeLists.txt  README.md
CPP/: Calculator.cpp  InfixCalc.cpp  Node.cpp  Queue.cpp  Spisok.cpp  Stack.cpp  main.cpp
Headers/: Calculator.h  InfixCalc.h  Node.h  Queue.h  Spisok.h  Stack.h  main.h
